--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 <!--    <script src="libs/highlight/highlight.pack.js"></script>-->
 
     <!-- Quill -->
-    <link rel="stylesheet" type="text/css" href="//cdn.quilljs.com/1.0.0/quill.core.css" />
-    <script type="text/javascript" src="//cdn.quilljs.com/1.0.0/quill.core.js"></script>
+<!--    <link rel="stylesheet" type="text/css" href="//cdn.quilljs.com/1.0.0/quill.core.css" />-->
+<!--    <link rel="stylesheet" type="text/css" href="//cdn.quilljs.com/1.0.0/quill.core.css" />-->
+    <link rel="stylesheet" type="text/css" href="//cdn.quilljs.com/1.3.6/quill.core.css" />
+<!--    <script type="text/javascript" src="//cdn.quilljs.com/1.0.0/quill.core.js"></script>-->
+<!--    BUG HERE: 1.3.6 breaks things! -->
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <!-- My stuff -->
@@ -57,7 +61,7 @@
         <button id="tweet-button"><i class="fa fa-twitter"></i></button>
         <button id="divider-button"><i class="fa fa-minus"></i></button>
     </div>
-    <div id="editor-container">Tell your story...</div>
+    <div id="editor-container">Type here</div>
 <!--    <button id="delta">Show delta in console</button>-->
 <!--    <button id="text">Show text in console</button>-->
 <!--    <button id="mathjax">Add MathJax</button>-->
