--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <!-- jQuery -->
     <script src="libs/jquery/jquery-3.4.1.min.js"></script>
 
-<!--    &lt;!&ndash; Highlight &ndash;&gt;-->
-<!--    <link rel="stylesheet" href="libs/highlight/styles/atelier-cave-dark.css">-->
-<!--    <script src="libs/highlight/highlight.pack.js"></script>-->
+    <!-- Highlight -->
+    <link rel="stylesheet" href="libs/highlight/styles/atelier-cave-dark.css">
+    <script src="libs/highlight/highlight.pack.js"></script>
 
     <!-- Quill -->
 <!--    <link rel="stylesheet" type="text/css" href="//cdn.quilljs.com/1.0.0/quill.core.css" />-->
 <!--    <link rel="stylesheet" type="text/css" href="//cdn.quilljs.com/1.0.0/quill.core.css" />-->
-    <link rel="stylesheet" type="text/css" href="//cdn.quilljs.com/1.3.6/quill.core.css" />
-<!--    <script type="text/javascript" src="//cdn.quilljs.com/1.0.0/quill.core.js"></script>-->
+<!--    <link rel="stylesheet" type="text/css" href="//cdn.quilljs.com/1.3.6/quill.core.css" />-->
+    <link rel="stylesheet" type="text/css" href="libs/quill/quill.snow.css" />
+    <link rel="stylesheet" type="text/css" href="libs/quill/quill.bubble.css" />
+    <!--    <script type="text/javascript" src="//cdn.quilljs.com/1.0.0/quill.core.js"></script>-->
 <!--    BUG HERE: 1.3.6 breaks things! -->
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 
