--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             }
         };
     </script>
+<!--    <script type="text/javascript" id="MathJax-script" async-->
+<!--            src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">-->
+<!--    </script>-->
     <script type="text/javascript" id="MathJax-script"
             src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
     </script>
