implemented block level editing with live preview. But the code is tremendously ugly and needs a major refactoring.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <!-- My stuff -->
     <link rel="stylesheet" type="text/css" href="styles.css">
 
+    <link rel="stylesheet" type="text/css" href="MathBlots.css">
+
     <script>
         window.mathjax_loaded = false
         MathJax = {
