--- a/index.html
+++ b/index.html
@@ -13,13 +13,10 @@
     <script src="libs/highlight/highlight.pack.js"></script>
 
     <!-- Quill -->
-<!--    <link rel="stylesheet" type="text/css" href="//cdn.quilljs.com/1.0.0/quill.core.css" />-->
-<!--    <link rel="stylesheet" type="text/css" href="//cdn.quilljs.com/1.0.0/quill.core.css" />-->
-<!--    <link rel="stylesheet" type="text/css" href="//cdn.quilljs.com/1.3.6/quill.core.css" />-->
+
     <link rel="stylesheet" type="text/css" href="libs/quill/quill.snow.css" />
     <link rel="stylesheet" type="text/css" href="libs/quill/quill.bubble.css" />
     <!--    <script type="text/javascript" src="//cdn.quilljs.com/1.0.0/quill.core.js"></script>-->
-<!--    BUG HERE: 1.3.6 breaks things! -->
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -47,12 +44,25 @@
             }
         };
     </script>
+    <script src="mathjaxCommands.js"></script>
 <!--    <script type="text/javascript" id="MathJax-script" async-->
 <!--            src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">-->
 <!--    </script>-->
     <script type="text/javascript" id="MathJax-script"
             src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.19.0/ace.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.19.0/ext-language_tools.min.js"></script>
+    <style type="text/css" media="screen">
+        .blocktexeditor, #editor {
+            position: absolute;
+            /*top: 0;*/
+            top: 50%;
+            right: 0;
+            bottom: 0;
+            left: 0;
+        }
+    </style>
 </head>
 
 <body>
@@ -69,20 +79,39 @@
         <button id="divider-button"><i class="fa fa-minus"></i></button>
     </div>
     <div id="editor-container">Type here</div>
-<!--    <button id="delta">Show delta in console</button>-->
-<!--    <button id="text">Show text in console</button>-->
-<!--    <button id="mathjax">Add MathJax</button>-->
-<!--    <button id="disable">Disable</button>-->
-<!--    <div id="editor"></div>-->
 
-<!--    <small>More details on <a href="https://lucidar.me/en/rich-content-editor/mathjax-and-quill-editor" target="_blank">this page</a>.</small>-->
-
-
-
-
-
+    <!--    For ACE-->
+    <div id="editor"></div>
     <script src="MathBlots.js"></script>
     <script src="app.js"></script>
+
+<script>
+    var editor = ace.edit("editor");
+    var langTools = ace.require("ace/ext/language_tools");
+    editor.setTheme("ace/theme/monokai");
+    editor.session.setMode("ace/mode/latex");
+    // editor.session.setMode("ace/mode/javascript");
+    var staticWordCompleter = {
+        getCompletions: function(editor, session, pos, prefix, callback) {
+            // var wordList = [String.raw `\foo`, "bar", "baz"];
+            var wordList  = MATHJAXCOMMANDS
+            callback(null, wordList.map(function(word) {
+                return {
+                    caption: word,
+                    value: word,
+                    meta: "static"
+                };
+            }));
+
+        }
+    }
+    editor.setOptions({
+        enableBasicAutocompletion: true,
+        enableSnippets: true,
+        enableLiveAutocompletion: true
+    });
+    editor.completers.push(staticWordCompleter)
+</script>
 </body>
 
 </html>
