--- a/index.html
+++ b/index.html
@@ -90,13 +90,14 @@
     <div id="editor-container">Type here</div>
 
     <!--    For ACE-->
-    <div id="editor"></div>
+<!--    <div id="editor"></div>-->
     <script src="MathBlots.js"></script>
     <script src="app.js"></script>
 
 <script>
     console.assert(window.configureACEEditor)
-    let node = document.getElementById("editor")
+    // let node = document.getElementById("editor")
+
     // configureACEEditor(node, "\\sum") // uncomment this to debug
 </script>
 </body>
