fixed another weird bug by calling configureACEEditor AFTER the node has been generated by quill.. if you dont do it this way, ace doesnt have an actual node to read character size off of

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div id="editor-container">Type here</div>
 
     <!--    For ACE-->
-    <div id="editor"></div>
+<!--    <div id="editor"></div>-->
     <script src="MathBlots.js"></script>
     <script src="app.js"></script>
 
@@ -98,7 +98,7 @@
     console.assert(window.configureACEEditor)
     let node = document.getElementById("editor")
 
-    configureACEEditor(node, "\\sum") // uncomment this to debug
+    // configureACEEditor(node, "\\sum") // uncomment this to debug
 </script>
 </body>
 
