--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <!--    For ACE-->
 <!--    <div id="editor"></div>-->
     <script src="MathBlots.js"></script>
+    <script src="MathEditorModule.js"></script>
     <script src="app.js"></script>
 
 <script>
