improved the click-away feature.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <button id="tweet-button"><i class="fa fa-twitter"></i></button>
         <button id="divider-button"><i class="fa fa-minus"></i></button>
     </div>
-    <div id="editor-container">Type here</div>
+    <div id="editor-container">Type</div>
 
     <!--    For ACE-->
 <!--    <div id="editor"></div>-->
